[package]
name = "redis-test"
version = "0.1.1"
edition = "2021"
description = "Testing helpers for the `redis` crate"
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis-test"
license = "BSD-3-Clause"
rust-version = "1.59"

[dependencies]
redis_wasi = { version = "0.22.1", path = "../redis" }

bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[features]
aio = ["futures", "redis_wasi/aio"]

[dev-dependencies]
redis_wasi = { version = "0.22.1", path = "../redis", features = ["aio", "tokio-comp"] }
tokio_wasi = { version = "1", features = ["rt", "macros"] }

